# TinySyntaxTree

./: CMakeLists.txt  my.md
.github/workflows/: cmake-multi-platform.yml
code/compiler_lab_3/: analyse.cpp  main_cmd.cpp  parse.cpp
test/: repeat语句.txt  三层for循环.txt  复杂表达式.txt  多语句.txt  嵌套if-else.txt
